[gd_scene load_steps=9 format=3]

[ext_resource type="Texture2D" uid="uid://cexjoigq7ci6x" path="res://art/enemy/boss/drone_spritesheet.png" id="1_domco"]
[ext_resource type="Script" path="res://scenes/characters/enemy/boss/boss_drone.gd" id="1_p36ml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unl6x"]
size = Vector2(80, 39)

[sub_resource type="Animation" id="Animation_lvnaf"]
resource_name = "Destroyed"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_bn2ci"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4ftjx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xrwvx"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gk2c"]
_data = {
"Destroyed": SubResource("Animation_lvnaf"),
"Idle": SubResource("Animation_bn2ci"),
"RESET": SubResource("Animation_4ftjx"),
"Walk": SubResource("Animation_xrwvx")
}

[node name="boss_drone" type="CharacterBody2D"]
z_index = 6
position = Vector2(328, 155)
collision_layer = 64
collision_mask = 65
script = ExtResource("1_p36ml")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_unl6x")

[node name="DroneSpritesheet" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_domco")
hframes = 6
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2gk2c")
}

[node name="MuzzleLeft" type="Marker2D" parent="."]
position = Vector2(-42, 0)

[node name="MuzzleRight" type="Marker2D" parent="."]
position = Vector2(43, 1)

[node name="Shoot_cooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Move_cooldown" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="Move_cooldown" to="." method="_on_move_cooldown_timeout"]
